--- a/room-detail.html
+++ b/room-detail.html
@@ -1154,8 +1154,8 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                                 <div class="wrap-box-1">
                                                  
                                                        <div class="box-img">
-                                                        <a class="" href="images/hall 01/DSC_2360.jpg/" data-fancybox="image">
-                                                            <img src="images/hall 01/DSC_2360.jpg/" class="img-responsive" alt="image0" ></a>
+                                                        <a class="" href="images/hall 01/DSC_2360.jpg"/data-fancybox="image">
+                                                            <img src="images/hall 01/DSC_2360.jpg"/class="img-responsive" alt="image0" ></a>
                                                       
                                                     </div>
                                                 </div>
