--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                 <!-- ITEM -->
 
                 <!-- ITEM -->
-                <div class="slider-item text-center" data-image="images/slider/img8.jpg">
+                <div class="slider-item text-center" data-image="images/slider/bg-img-2.jpg">
                     <div class="slider-text">
                         <!-- <span class="slider-caption-sub slider-caption-sub-2">EARLY BOOKING BONUS SALE</span> -->
                         <!-- <h2 class="slider-caption slider-caption-2">SAVE <small>UP<br/>TO</small> 60%</h2> -->
