--- a/room-detail.html
+++ b/room-detail.html
@@ -951,8 +951,8 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                                 <div class="wrap-box-1">
                                                  
                                                        <div class="box-img">
-                                                        <a class="" href="images/hall 01/IMG_2038.jpg" data-fancybox="image">
-                                                            <img src="images/hall 01/IMG_2038.jpg" class="img-responsive" alt="image0" ></a>
+                                                        <a class="" href="images/hall 01/IMG_2038.JPG" data-fancybox="image">
+                                                            <img src="images/hall 01/IMG_2038.JPG" class="img-responsive" alt="image0" ></a>
                                                       
                                                     </div>
                                                 </div>
