--- a/gallery-2.html
+++ b/gallery-2.html
@@ -1562,7 +1562,17 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                             </div>
                                         </div>
 
-
+ <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
+                                            <div class="wrap-box-1">
+                                             
+                                                   <div class="box-img">
+                                                    <a class="lightbox" href="images/mybatchparty/IMG_19401.jpg"  
+                                                    data-fancybox="image">
+                                                        <img src="images/mybatchpartysmall/IMG_19401.jpg" class="img-responsive" alt="image0" ></a>
+                                                  
+                                                </div>
+                                            </div>
+                                        </div>
 
                                 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
