--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
             <div class="banner-slider" id="banner-slider">
 
                 <!-- ITEM -->
-                <div class="slider-item text-center" data-image="images/slider/bg-img-1.jpg.jpg">
+                <div class="slider-item text-center" data-image="images/slider/img5.JPG.jpg">
                     <div class="slider-text">
                         <!-- <span class="slider-caption-sub slider-caption-sub-1">NEW bakery</span> -->
                         <!-- <h2 class="slider-caption slider-caption-1">bakery SALLAD</h2> -->
@@ -250,7 +250,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                 <!-- ITEM -->
 
                 <!-- ITEM -->
-                <div class="slider-item text-center" data-image="images/slider/bg-img-2.jpg.jpg">
+                <div class="slider-item text-center" data-image="images/slider/bg-img-2.jpg">
                     <div class="slider-text">
                         <!-- <span class="slider-caption-sub slider-caption-sub-2">EARLY BOOKING BONUS SALE</span> -->
                         <!-- <h2 class="slider-caption slider-caption-2">SAVE <small>UP<br/>TO</small> 60%</h2> -->
@@ -573,7 +573,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                 <ul>
                                     <li>Friendly & Experienced team</li>
                                     <li>lush greeny surrounding</li>
-                                    <li>Free car Parkign</li>
+                                    <li>Free car Parking</li>
                                     <li>Varied Dinning Option</li>
                                     <li>Spacious Banquet Halls</li>
                                     <li>Safe Enviroment</li>
