--- a/gallery-2.html
+++ b/gallery-2.html
@@ -2017,7 +2017,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2363.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2363.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2363.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2028,7 +2028,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2368.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2368.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2368.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2037,7 +2037,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2370.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2370.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2370.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2048,7 +2048,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2372.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2372.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2372.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2059,7 +2059,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
 <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2373.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2373.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2373.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2070,7 +2070,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                         <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2378.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2378.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2378.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2079,7 +2079,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
           <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2381.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2381.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2381.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2090,7 +2090,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
          <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2382.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2382.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2382.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2099,7 +2099,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
    <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2383.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2383.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2383.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
@@ -2109,7 +2109,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                            <div class="gallery_product col-lg-3 col-md-4 col-sm-6 col-xs-6 ">
                                             <div class="wrap-box-1">
                                                 <div class="box-img">
-                                                    <a class="lightbox " href="images/dining/DSC_2384.jpg"data-fancybox="image">
+                                                    <a class="lightbox " href="images/dining/DSC_2384.JPG"data-fancybox="image">
                                                         <img src="images/dinningsmallimg/DSC_2384.jpg" class="img-responsive" alt="image0"></a>
                                                     <!-- <p>Lorem Ipsutm is simply dummy text of the printing</p> -->
                                                 </div>
