--- a/gallery-2.html
+++ b/gallery-2.html
@@ -897,7 +897,7 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                                             <div class="wrap-box-1">
                                              
                                                    <div class="box-img">
-                                                    <a class="lightbox" href="images/ALL-LARGE/IMG_2102.jpg"  
+                                                    <a class="lightbox" href="images/ALL-LARGE/IMG_2102.JPG"  
                                                     data-fancybox="image">
                                                         <img src="images/ALL-SMALL(270 - 179)/IMG_2102.jpg" class="img-responsive" alt="image0" ></a>
                                                   
