--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@ src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscrip
                 <!-- ITEM -->
                 <div class="slider-item text-center" data-image="images/slider/bg-img-1.jpg">
                     <div class="slider-text">
-                        <!-- <span class="slider-caption-sub slider-caption-sub-1">NEW bakery</span> -->
-                        <!-- <h2 class="slider-caption slider-caption-1">bakery SALLAD</h2> -->
+                        <span class="slider-caption-sub slider-caption-sub-1">WELCOM TO</span>
+                        <h2 class="slider-caption slider-caption-1">Aronway Baquet Hall Hotel</h2>
                         <!-- <a href="#" class="awe-btn awe-btn-12 awe-btn-slider">VIEW NOW</a> -->
                     </div>
                 </div>
