--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Hotel - Aronway </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="keywords" content="Hotel Aronway, hotels in Mawanella, Mawanella hotels, wedding halls in Mawanella, banquet halls in Mawanella, Mawanella wedding halls, weddings in Mawanella, hotels in aranayake">
+
+<meta name="description" content="The Aronway Banquet Hotel is located in the beautiful district Kegalle , 2.5km away from Mawanella town in Sri Lanka. We have newly renovated & perfectly equipped banquet halls with the ability to accomadate over 500 people " />
+
+
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
